fix search on map on mobile

--- a/django_project/core/base_static/css/home.css
+++ b/django_project/core/base_static/css/home.css
@@ -40,8 +40,21 @@ img {
     padding-top: 53px;
 }
 
-.nav-updates {
-    font-size: 0.7em;
+.select-country {
+    left: auto !important;
+    margin-left: 0 !important;
+    width: 100% !important;
+    position: relative !important;
+    bottom: 0 !important;
+}
+
+.select-country-wrapper {
+    width: 100% !important;
+    position: absolute;
+    max-width: 100% !important;
+    padding-left: 90px !important;
+    padding-right: 10px !important;
+    bottom: 30px !important;
 }
 
 }
